--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile files('libs/android-core-3.2.1.jar')
+    compile files('libs/core-3.2.1.jar')
+    compile files('libs/android-integration-3.2.1.jar')
 }
