--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile files('libs/android-core-3.2.1.jar')
     compile files('libs/core-3.2.1.jar')
     compile files('libs/android-integration-3.2.1.jar')
+    compile 'com.github.anrwatchdog:anrwatchdog:1.1.+'
 }
