--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
             android:screenOrientation="landscape"
             android:allowTaskReparenting="false"
             android:noHistory="true"
+            android:launchMode="singleTask"
+            android:taskAffinity=""
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
